--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -595,6 +595,7 @@ oi-select .select-search-list-item_selection {
   width: 100%;
   padding: @margin1;
   padding-bottom: 0px;
+  min-width: 177px!important;
 
 }
 .conversacion li p
@@ -631,7 +632,7 @@ oi-select .select-search-list-item_selection {
 .conversacion .seen
 {
   float: right;
-  font-size: 20px!important;
+  font-size: 15px!important;
 }
 
 
