--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -64,6 +64,7 @@ border-radius: 0px!important;
 
 body{
   width: 100%;
+  overflow-x: hidden;
   float: left;
 }
 body > header,body > header nav
@@ -685,4 +686,125 @@ oi-select .select-search-list-item_selection {
   position: relative;
   top: 3px;
   color: white;
+}
+.chat:not(.conversacion) .icon
+{
+  display: none;
+}
+@media screen and(max-width: 1024px) {
+  .chat
+  {
+    width: 30%;
+  }
+
+}
+
+@media screen and(max-width: 768px) {
+.chat
+{
+  width: 35%;
+}
+
+}
+@media screen and(max-width: 601px) {
+  .chat {
+    width: 20%;
+    height: 70px;
+    -webkit-transition: all 200ms;
+    -moz-transition: all 200ms;;
+    -ms-transition: all 200ms;;
+    -o-transition: all 200ms;;
+    transition: all 200ms;;
+    bottom: 70px;
+    z-index: 1000000000;
+  }
+
+  .chat:not(.conversacion) .icon {
+    display: inline;
+    position: relative;
+    top: 10px;
+  }
+
+  .chat:not(.conversacion) .icon i {
+    font-size: 30px!important
+  }
+  .chat:not(.conversacion) .text {
+    display: none;
+  }
+
+  .chat:not(.conversacion) .toggle-expand {
+    display: none;
+  }
+
+  .chat:not(.conversacion) .header
+  {
+    float: left;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+  .chat.expanded
+  {
+    height: 100%;
+    background: @color3;
+    width: 100%;
+    bottom: 0px;
+    overflow: hidden;
+  }
+  .chat.expanded .header
+  {
+    height: 70px;
+  }
+
+  .conversacion
+  {
+    width: 100%;
+    height: 100%;
+    top: 0;
+  }
+  .conversacion .header
+  {
+    height: 8%;
+    display: flex;
+    align-items: center;
+  }
+  .conversacion .header h3
+  {
+    width: 100%;
+  }
+  .conversacion ul
+  {
+    height: 72%!important;
+  }
+  .conversacion .write-box
+  {
+    height: 20%;
+  }
+  .conversacion .write-box [contenteditable]
+  {
+    height: 65%;
+  }
+  .conversacion .write-box .controls
+  {
+    display: flex;
+    height: 35%;
+    align-items: center;
+    position: relative;
+  }
+  .conversacion .write-box .controls .enviar
+  {
+    position: absolute;
+    padding-top: 2.3%;
+    right: 3%;
+  }
+  .chat .msg-badge
+  {
+    top: -28px;
+    left: -40px;
+  }
+
+  .chat.expanded .msg-badge
+  {display: none;}
+
+
 }
