--- a/views/home/objetos/streaming.ejs
+++ b/views/home/objetos/streaming.ejs
@@ -4,6 +4,11 @@
 
 <div class="video-container w3-col s12  ">
 
+  <div class="streaming-loading">
+    <h3>Cargando</h3>
+<%- partial('loading-streaming.ejs')%>
+  </div>
+
   <video  class="w3-col s12 " id="video"></video>
 </div>
 
