--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -75,7 +75,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -119,6 +119,26 @@
     </section>
 
     <%- partial('../modal/cuerpo.ejs') %>
+    <script>
+
+
+      angular.element(document).ready(function () {
+
+        <% if(streaming)
+        {
+          %>
+
+        io.socket.get('/streaming/<%= streaming %>');
+        <%
+        }%>
+
+      });
+
+
+
+
+    </script>
+
 
 
 
