--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -817,3 +817,31 @@ oi-select .select-search-list-item_selection {
 
 
 }
+
+
+.video-container
+{
+  height: 600px;
+  background-color: black;
+}
+
+.video-container video
+{
+
+  height: 100%;
+
+  opacity:0;
+}
+
+.video-container .streaming-loading
+{
+  height: 100%;
+  align-items: center;
+  display: flex;
+  text-align: center;
+  flex-wrap: wrap;
+  color:white;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
