--- a/views/home/cuerpo.ejs
+++ b/views/home/cuerpo.ejs
@@ -1,5 +1,5 @@
 
-<div class="main-container">
+<div class="main-container" data-ng-controller="streamingController">
   <%- partial("objetos/header.ejs") %>
 
   <%- partial("objetos/streaming.ejs")%>
