--- a/views/home/objetos/streaming.ejs
+++ b/views/home/objetos/streaming.ejs
@@ -1,30 +1,105 @@
-<% if(streaming)
-{
-%>
 
-<div class="video-container w3-col s12  ">
 
-  <div class="streaming-loading"  >
+<div class="video-container w3-col s12 " data-ng-if="streaming && streaming.status != 'stopped'">
+
+  <div class="streaming-loading"   data-ng-if="streaming.status == 'loading'" >
 
 <%- partial('loading-streaming.ejs')%>
   </div>
 
-  <video  class="w3-col s12 " id="video"></video>
+  <video  data-ng-if="streaming.status == 'playing'"  class="w3-col s12 " id="video"></video>
 </div>
 
 <script>
-  if(Hls.isSupported()) {
-    var video = document.getElementById('video');
-    var hls = new Hls();
-    hls.loadSource('/get/streaming/<%= streaming %>/out.m3u8');
-    hls.attachMedia(video);
-    hls.on(Hls.Events.MANIFEST_PARSED,function() {
-      video.play();
+
+
+  app.controller('streamingController', function($rootScope,$http) {
+
+
+    io.socket.get('/streaming');
+
+    // e.g. in the browser...
+    io.socket.on('streaming', function (event){
+
+      console.log(event);
+
+     /* if(event.data.status && $rootScope.streaming && event.data.streaming.id == $rootScope.streaming.id)
+      {
+        $rootScope.streaming=event.data.streaming;
+        $rootScope.streaming.status =event.data.status;
+
+        if(event.data.status == 'playing')
+        {
+          showStreaming($rootScope.streaming.id);
+        }
+        $rootScope.$apply();
+
+      }*/
+
     });
-  }
-  else
-  {
-    alert("cant play hls");
-  }
+
+
+
+
+    $rootScope.streaming={status:'loading'};
+
+
+    $http.get('/admin/live/streamings?<%= (s)?'id='+s:''%>').then(function(res){
+
+      console.log(res);
+
+      if(res.data.length)
+      {
+        $rootScope.streaming=res.data[0];
+
+      }
+      else
+      {
+        $rootScope.streaming.status = 'stopped';
+      }
+
+    },error);
+
+
+
+
+    $rootScope.$watch('streaming', function(newVal, oldVal){
+      if($rootScope.streaming && $rootScope.streaming.status =='playing')
+      {
+        setTimeout(function () {
+
+          showStreaming($rootScope.streaming.id);
+
+        });
+      }
+    }, true);
+
+    function showStreaming(id) {
+
+      if(Hls.isSupported()) {
+        var video = document.getElementById('video');
+        var hls = new Hls();
+        hls.loadSource('/get/streaming/'+id+'/out.m3u8');
+        hls.attachMedia(video);
+        hls.on(Hls.Events.MANIFEST_PARSED,function() {
+          video.play();
+        });
+      }
+      else
+      {
+        alert("cant play hls");
+      }
+    }
+
+
+
+
+
+
+
+  });
+
+
+
 </script>
-<%}%>
+
