--- a/views/home/objetos/header.ejs
+++ b/views/home/objetos/header.ejs
@@ -1,5 +1,5 @@
 <header class="w3-col s12 ">
 
-  <h1><%= __("transmision.titulo") %></h1>
-
+  <h1><%= s.title %></h1>
+  <div class="line"></div>
 </header>
