--- a/views/templates/listado-streamings/cuerpo.ejs
+++ b/views/templates/listado-streamings/cuerpo.ejs
@@ -25,7 +25,7 @@ else
 
       $rootScope.streamingList={};
 
-      $http.get('/admin/live/streamings').
+      $http.get('/live/streamings').
         then(function (res) {
 
           for(var k in res.data)
