--- a/views/templates/listado-streamings/objetos/list.ejs
+++ b/views/templates/listado-streamings/objetos/list.ejs
@@ -56,8 +56,8 @@
       <%}%>
 
 
-      <a data-ng-if="streamingList['<%= item.id%>'] == 'loading'">
-        <h4>Cargando...</h4>
+      <a class="loading"  data-ng-if="streamingList['<%= item.id%>'] == 'loading'">
+        <i class="material-icons">&#xE917;</i>
       </a>
 
 
