--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -825,8 +825,10 @@ oi-select .select-search-list-item_selection {
 
 .video-container
 {    position: relative;
-  height: 400px;
+  height: 55vh;
   background-color: black;
+  display: flex;
+  align-items: center;
 }
 
 
@@ -851,4 +853,59 @@ oi-select .select-search-list-item_selection {
 [contenteditable]
 {
   overflow-y: scroll;
+}
+
+.video-container .no-streaming{
+  text-align: center;
+  width: 100%;
+
+}
+.video-container .no-streaming h3
+{
+  color: @color3;
+  margin-top: 0px!important;
+}
+
+
+.circular-loader {
+  -webkit-animation: rotate 2s linear infinite;
+  animation: rotate 2s linear infinite;
+  height: 100%;
+  -webkit-transform-origin: center center;
+  -ms-transform-origin: center center;
+  transform-origin: center center;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: auto;
+}
+
+.loader-path {
+  stroke-dasharray: 150,200;
+  stroke-dashoffset: -10;
+  -webkit-animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+  animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+  stroke-linecap: round;
+}
+
+@-webkit-keyframes rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.listado.streaming .loading i
+{
+  animation: rotate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
 }
