Agregando modulo de manejo de archivos

--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -666,13 +666,25 @@ oi-select .select-search-list-item_selection {
   outline: none
 ;
 }
-.conversacion .write-box .controls .enviar
+.conversacion .write-box .controls .w3-right .control
 {
-  float: right;
+
   position: relative;
   right: 10px;
   top: 3px;
 }
+
+
+.conversacion .write-box .controls .w3-left .control
+{
+
+  position: relative;
+  left: 10px;
+  top: 3px;
+}
+
+
+
 .conversacion .write-box .enviar
 {
   float: right;
